[package]
name = "casmap"
version = "0.1.0"
edition = "2021"
description = "A way to count constructs for cas12 6-plex CRISPR screens"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.10", features = ["derive"] }
csv = "1.1.6"
fxread = "0.2.5"
hashbrown = "0.12.3"
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
spinoff = "0.5.4"
